# Ticket-System-2024

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Makefile  Ticketsys_project.md  it  itt  maincoding  runtest  testticketsystemUserTicket_data  testticketsystemUserTicket_tree  testticketsystemorder_num_data  testticketsystemorder_num_tree  testticketsystemreleased_train_info_data  testticketsystemreleased_train_info_tree  testticketsystemticket_queue_data  testticketsystemticket_queue_tree  testticketsystemtrainsystemreleased_train_data  testticketsystemtrainsystemstation_train_data  testticketsystemtrainsystemstation_train_tree  testticketsystemtrainsystemunreleased_train_tree  testusersystemUserInfo  testusersystemUserInfo_data  testusersystemUserInfo_tree
.cache/clangd/index/: B_plustree.hpp.3191D1C936193AFA.idx  B_plustree.hpp.6E0DD989DB38B6D1.idx  Commandsystem.hpp.6228B43F0522FDBF.idx  Commandsystem.hpp.6C6AFA5F9379E1D9.idx  Mystring.hpp.CA8FD4E722A3706C.idx  Mystring.hpp.D2228C54135DA7AE.idx  Systhesissystem.hpp.5418DE2036352784.idx  Systhesissystem.hpp.FDF77D314F6E2C3C.idx  Ticketsystem.cpp.BE4C95050D100F7B.idx  Ticketsystem.hpp.75BA3FF0CD6C539F.idx  Ticketsystem.hpp.86EAF416737FC828.idx  (+21 more)
TicketSystem/: main
code/: main  testticketsystemUserTicket_data  testticketsystemUserTicket_tree  testticketsystemorder_num_data  testticketsystemorder_num_tree  testticketsystemreleased_train_info_data  testticketsystemticket_queue_data  testticketsystemticket_queue_tree  testticketsystemtrainsystemreleased_train_data  testticketsystemtrainsystemstation_train_data  testticketsystemtrainsystemstation_train_tree  testusersystemUserInfo_data  testusersystemUserInfo_tree
src/code/: Commandsystem.hpp  Systhesissystem.hpp  Ticketsystem.hpp  Trainsystem.hpp  Usersystem.hpp  easyinclude.hpp  main.cpp  mytype.h  mytype.hpp
src/include/: B_plustree.hpp  Compact_array.hpp  Hash.hpp  Mystring.hpp  exceptions.hpp  external_array.hpp  external_bpt.hpp  external_map.hpp  fastinclude.hpp  map.hpp  priority_queue.hpp  timer.hpp  utility.hpp  vector.hpp
